mock_object/tests/cases/failure/no_constructor/no_constructor.stderr
error[E0599]: no function or associated item named `new` found for struct `TestObj` in the current scope
 --> tests/cases/failure/no_constructor/no_constructor.rs:3:1
  |
3 |   #[mock_object(
  |  _^
4 | |     mock_one = ["Test value for mock one.", 89],
5 | |     mock_two = ["Test value for mock two.", 45],
6 | | )]
  | |__^ function or associated item not found in `TestObj`
7 |   struct TestObj {
  |   -------------- function or associated item `new` not found for this struct
  |
note: if you're trying to build a new `TestObj` consider using one of the following associated functions:
      TestObj::mock_one
      TestObj::mock_two
 --> tests/cases/failure/no_constructor/no_constructor.rs:3:1
  |
3 | / #[mock_object(
4 | |     mock_one = ["Test value for mock one.", 89],
5 | |     mock_two = ["Test value for mock two.", 45],
6 | | )]
  | |__^
  = note: this error originates in the attribute macro `mock_object` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `test_obj_mock_one`
  --> tests/cases/failure/no_constructor/no_constructor.rs:13:9
   |
13 |     let test_obj_mock_one = TestObj::mock_one();
   |         ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_test_obj_mock_one`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `test_obj_mock_two`
  --> tests/cases/failure/no_constructor/no_constructor.rs:14:9
   |
14 |     let test_obj_mock_two = TestObj::mock_two();
   |         ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_test_obj_mock_two`
